--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "pre-commit": "^1.1.3"
   },
   "scripts": {
     "start": "gulp",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DevProgress/devprogress.github.io.git"
